[gd_scene load_steps=10 format=2]

[ext_resource path="res://Common/TileMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemy/DrBrain.tscn" type="PackedScene" id=3]
[ext_resource path="res://Traps/Saw.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Cannon.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Level_5.gd" type="Script" id=6]
[ext_resource path="res://Scenes/ColorRect.gd" type="Script" id=7]
[ext_resource path="res://Scenes/Interactable.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 8 )

[node name="Level_5" type="Node2D"]
script = ExtResource( 6 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -272.0
margin_top = -368.0
margin_right = 1616.0
margin_bottom = 936.0
color = Color( 0, 0, 0, 1 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelNavigation" type="Navigation2D" parent="."]

[node name="TileMap" parent="LevelNavigation" instance=ExtResource( 1 )]
scale = Vector2( 4, 4 )
tile_data = PoolIntArray( 65535, 27, 0, 0, 9, 0, 1, 9, 0, 2, 9, 0, 3, 9, 0, 4, 9, 0, 5, 10, 0, 6, 9, 0, 7, 9, 0, 8, 9, 0, 9, 9, 0, 10, 28, 0, 131071, 12, 0, 65536, 14, 0, 65537, 8, 0, 65538, 8, 0, 65539, 8, 0, 65540, 8, 0, 65541, 26, 0, 65542, 8, 0, 65543, 8, 0, 65544, 8, 0, 65545, 15, 0, 65546, 16, 0, 196607, 12, 0, 131072, 13, 0, 131073, 1, 0, 131074, 1, 0, 131075, 3, 0, 131076, 3, 0, 131077, 3, 0, 131078, 3, 0, 131079, 1, 0, 131080, 1, 0, 131081, 17, 0, 131082, 16, 0, 262143, 12, 0, 196608, 13, 0, 196609, 1, 0, 196610, 3, 0, 196611, 1, 0, 196612, 1, 0, 196613, 1, 0, 196614, 1, 0, 196615, 3, 0, 196616, 1, 0, 196617, 17, 0, 196618, 16, 0, 327679, 12, 0, 262144, 13, 0, 262145, 1, 0, 262146, 3, 0, 262147, 1, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 3, 0, 262152, 1, 0, 262153, 17, 0, 262154, 16, 0, 393215, 12, 0, 327680, 25, 0, 327681, 23, 0, 327682, 3, 0, 327683, 23, 0, 327684, 32, 0, 327685, 23, 0, 327686, 23, 0, 327687, 3, 0, 327688, 23, 0, 327689, 24, 0, 327690, 16, 0, 458751, 30, 0, 393216, 22, 0, 393217, 22, 0, 393218, 22, 0, 393219, 22, 0, 393220, 31, 0, 393221, 22, 0, 393222, 22, 0, 393223, 22, 0, 393224, 22, 0, 393225, 22, 0, 393226, 29, 0 )

[node name="Enemy" type="Node2D" parent="."]

[node name="DrBrain" parent="Enemy" instance=ExtResource( 3 )]
position = Vector2( 640, 208 )
scale = Vector2( 6, 6 )

[node name="Trap" type="Node2D" parent="."]

[node name="Saw" parent="Trap" instance=ExtResource( 4 )]
position = Vector2( 320, 704 )

[node name="Saw2" parent="Trap" instance=ExtResource( 4 )]
position = Vector2( 320, 576 )

[node name="Saw3" parent="Trap" instance=ExtResource( 4 )]
position = Vector2( 320, 448 )

[node name="Saw4" parent="Trap" instance=ExtResource( 4 )]
position = Vector2( 448, 320 )

[node name="Saw5" parent="Trap" instance=ExtResource( 4 )]
position = Vector2( 576, 320 )

[node name="Saw6" parent="Trap" instance=ExtResource( 4 )]
position = Vector2( 704, 320 )

[node name="Saw7" parent="Trap" instance=ExtResource( 4 )]
position = Vector2( 832, 320 )

[node name="Saw8" parent="Trap" instance=ExtResource( 4 )]
position = Vector2( 960, 448 )

[node name="Saw9" parent="Trap" instance=ExtResource( 4 )]
position = Vector2( 960, 576 )

[node name="Saw10" parent="Trap" instance=ExtResource( 4 )]
position = Vector2( 960, 704 )

[node name="Cannon" parent="." instance=ExtResource( 5 )]
position = Vector2( 96, 704 )

[node name="Cannon2" parent="." instance=ExtResource( 5 )]
position = Vector2( 96, 568 )

[node name="Cannon3" parent="." instance=ExtResource( 5 )]
position = Vector2( 96, 432 )

[node name="Cannon_timer" type="Timer" parent="."]
wait_time = 2.0

[node name="Cooldown" type="Timer" parent="."]
wait_time = 4.25

[node name="Interactable" parent="." instance=ExtResource( 8 )]
position = Vector2( 704, 136 )

[node name="CollisionShape2D" parent="Interactable" index="0"]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 640, 400 )
current = true

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 576, 640 )

[connection signal="timeout" from="Cannon_timer" to="." method="_on_Cannon_timer_timeout"]
[connection signal="timeout" from="Cooldown" to="." method="_on_Cooldown_timeout"]
[connection signal="area_entered" from="Interactable" to="." method="_on_Interactable_area_entered"]

[editable path="Interactable"]
